package com.prototype.triptop.strategy;

import com.prototype.triptop.domain.UserInfo;

public interface UserInfoRefact {
    UserInfo toUserInfo();
}
